; ModuleID = '/home/carl/AnghaBench/openssl/ssl/extr_ssl_cert.c_ssl_cert_lookup_by_idx.c'
source_filename = "/home/carl/AnghaBench/openssl/ssl/extr_ssl_cert.c_ssl_cert_lookup_by_idx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ssl_cert_info = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ssl_cert_lookup_by_idx(i64 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = load i32*, i32** @ssl_cert_info, align 8
  %6 = call i64 @OSSL_NELEM(i32* %5)
  %7 = icmp uge i64 %4, %6
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %13

9:                                                ; preds = %1
  %10 = load i32*, i32** @ssl_cert_info, align 8
  %11 = load i64, i64* %3, align 8
  %12 = getelementptr inbounds i32, i32* %10, i64 %11
  store i32* %12, i32** %2, align 8
  br label %13

13:                                               ; preds = %9, %8
  %14 = load i32*, i32** %2, align 8
  ret i32* %14
}

declare dso_local i64 @OSSL_NELEM(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
